--- a/app/src/main/res/layout/activity_knowledge_detailed.xml
+++ b/app/src/main/res/layout/activity_knowledge_detailed.xml
@@ -31,7 +31,7 @@
             android:src="@drawable/left_back" />
     </RelativeLayout>
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -48,7 +48,7 @@
         android:layout_height="1dp"
         android:background="@drawable/shadow_bottom" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
